apps/wesley.io/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wesley-io
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
