apps/wesley.io/base/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wesley-io
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wesley.io`) || Host(`wesl.io`) || Host(`wesleyklop.nl`)
      kind: Rule
      services:
        - name: wesley-io
          port: 80
